--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <ul *ngIf="todos$ | async as todos">
   <li *ngFor="let todo of todos">
     {{ todo.name }} <button (click)="deleteItem(todo.id)">DELETE</button>
-    <button *ngIf="!editing" (click)="editTodo(todo)">EDIT</button>
+    <button [routerLink]="['/edit', todo.id]">EDIT</button>
   </li>
 </ul>
 
